# benchmarks

./: CMakeLists.txt  README.md  array_view.cpp
benchs/: CMakeLists.txt  apply_on_tuple_s.cpp  array_alloc.cpp  array_assign.cpp  array_expression_template.cpp  array_iteration.cpp  array_loop.cpp  array_view.cpp  calloc.cpp  common.hpp  delay.cpp  det_manip.cpp  enumerate.cpp  gf_clef_chain.cpp  gf_m.cpp  gf_m_ctint.cpp  gf_m_product_loop.cpp  gf_ms.cpp  gf_s.cpp  issue185.cpp  mat.cpp  mat2.cpp  matmul_s.cpp  memory_compact.cpp  my_determinant.hpp  product.hpp  product_loop.cpp  range.cpp  rbt.cpp  rbt.hpp  scope_exit.cpp  tmp.cpp  tr_ab.cpp  tr_ab_asm.cpp  tr_ab_asm2.cpp
src/: array_assign.cpp  array_iteration.cpp  gf_s.cpp
